--- a/02-android/MiAplicacion/app/src/main/res/values/strings.xml
+++ b/02-android/MiAplicacion/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MiAplicacion</string>
     <string name="action_settings">Settings</string>
     <string name="hola_mundo">Hola mundo!</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
